github-comments/压测/ISTIO部署/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: common-gateway
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-a-ingress
spec:
  hosts:
  - "*"
  gateways:
  - common-gateway
  http:
  - match:
    - uri:
        prefix: "/api"
    route:
    - destination:
        host: gateway
  - match:
    - uri:
        prefix: "/service-a"
    route:
    - destination:
        host: service-a
  - route:
    - destination:
        host: frontend-react
---
